Bug 193316. Caret not visible in readonly fields (HTML or XUL). r=mrbkap, sr=smfr